moved physical schema operations (ddls) to commit, after integrity check, fixed heisenbug in neo4j, bumped some versions